changed courseId in ObjectId, fixed query values in all repositories, added MessageRepositories + minor changes